--- a/src/themes/material.css
+++ b/src/themes/material.css
@@ -14,9 +14,24 @@
 [theme="minimal"] base-select::part(option-list) {
   top: 120%;
   border-radius: 5px;
-  animation-name: fade-in;
-  animation-duration: 100s;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 800px) {
+  [theme="minimal"] base-select::part(option-list)[hidden] {
+    position: fixed;
+    display: block;
+    top: calc(100%);
+    transition: all 0.5s ease;
+  }
+
+  [theme="minimal"] base-select::part(option-list) {
+    position: fixed;
+    top: calc(100% - 300px);
+    border-radius: 0px;
+    transition: all 0.5s ease;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
+  }
 }
 
 [theme="minimal"] base-select::part(tag) {
