--- a/src/components/base-select/base-select.css
+++ b/src/components/base-select/base-select.css
@@ -9,6 +9,13 @@
   --base-select-border-style: solid;
   --base-select-border-color: var(--base-color-neutral-2, #e6e6e6);
   --base-select-border-radius: var(--base-border-radius-1, 0px);
+
+  --base-select-option-list-border: var(--base-select-border-width) solid
+    var(--base-neutral--2, #e6e6e6);
+  --base-select-option-list-border-radius: var(--base-select-border-radius);
+  --base-select-option-list-box-shadow: 0px;
+  --base-select-option-list-position: absolute;
+  --base-select-option-list-top: 110%;
 }
 
 :host {
@@ -140,14 +147,9 @@ button[part="remove-tag"] {
 }
 
 div[part="option-list"] {
-  --base-select-option-list-border: var(--base-select-border-width) solid
-    var(--base-neutral--2, #e6e6e6);
-  --base-select-option-list-border-radius: var(--base-select-border-radius);
-  --base-select-option-list-box-shadow: 0px;
-
-  position: absolute;
+  position: var(--base-select-option-list-position);
   left: 0;
-  top: 110%;
+  top: var(--base-select-option-list-top);
   width: 100%;
   max-width: 100%;
   z-index: 600;
