--- a/src/themes/material.css
+++ b/src/themes/material.css
@@ -15,13 +15,21 @@
   --base-select-option-list-position: absolute;
   --base-select-option-list-top: 120%;
   --base-select-option-list-border-radius: 5px;
-  --base-select-option-list-border-radius: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
+  --base-select-option-list-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 800px) {
   [theme="minimal"] base-select {
+    --base-select-option-list-box-shadow: 0px -4px 20px 0px rgba(0, 0, 0, 0.1);
     --base-select-option-list-position: fixed;
+    --base-select-option-list-top: calc(100% - 280px);
+    --base-select-option-list-opacity: 0;
+    --base-select-option-list-transition: all 0.2s ease-in-out;
+  }
+
+  [theme="minimal"] base-select[menu-is-open] {
     --base-select-option-list-top: calc(100% - 300px);
+    --base-select-option-list-opacity: 1;
   }
 }
 
