--- a/src/themes/material.css
+++ b/src/themes/material.css
@@ -18,6 +18,10 @@
   --base-select-option-list-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
+[theme="minimal"] base-select[multiple] base-option[selected] {
+  display: none;
+}
+
 @media (max-width: 800px) {
   [theme="minimal"] base-select {
     --base-select-option-list-box-shadow: 0px -4px 20px 0px rgba(0, 0, 0, 0.1);
