--- a/lib/src/components/base-option/base-option.css
+++ b/lib/src/components/base-option/base-option.css
@@ -1,15 +1,24 @@
 :host {
-  --base-option-padding: 10px;
+  --base-option-padding: var(--base-space-sm);
+  --base-option-bg-color: var(--base-color-white);
+  --base-option-border-radius: var(--base-border-radius-sm);
+  --base-option-active-color: var(--base-color-focus-light);
+  --base-option-selected-color: var(--base-color-focus);
+  --base-option-font-color: var(--base-color-black);
+}
+
+:host {
   box-sizing: border-box;
   width: 100%;
   max-width: 100%;
   border: 0;
   display: flex;
+  color: var(--base-option-font-color);
   align-items: center;
   cursor: pointer;
-  background: var(--base-color-white);
+  background: var(--base-option-bg-color);
   text-align: left;
-  border-radius: var(--base-border-radius-200);
+  border-radius: var(--base-option-border-radius);
   padding: var(--base-option-padding);
   margin-top: var(--base-spacing-100);
   border-style: solid;
@@ -30,61 +39,17 @@
   display: none;
 }
 
-:host(:active) {
-  background-color: #2684ff;
-  color: white;
-}
-
 :host([active]:not([disabled])) {
-  background-color: #2684ff;
-  color: white;
+  --base-color-font-color: var(--base-color-black);
+  --base-option-bg-color: var(--base-option-active-color);
 }
 
 :host([selected]:not([active]):not([disabled])) {
-  background-color: #deebff;
+  --base-option-bg-color: var(--base-option-selected-color);
+  --base-option-font-color: var(--base-color-white);
 }
 
 :host([selected][active]) {
-  background-color: #2684ff;
-  color: white;
-}
-
-:host([selected] .base-option__label),
-:host([selected] .base-option__desc),
-:host([selected] .base-option__icon) {
-  color: var(--base-color-active-800);
-}
-
-.base-option__icon {
-  margin-right: var(--base-spacing-300);
-}
-
-.base-option__label {
-  margin: 0;
-  padding: 0;
-  color: var(--base-color-ui-800);
-  font-size: var(--base-heading-300);
-  font-weight: 400;
-  display: block;
-}
-
-.base-option__label b {
-  font-weight: 600;
-}
-
-.base-option__desc {
-  margin: 0;
-  padding: 0;
-  margin-top: var(--base-spacing-200);
-  font-size: var(--base-paragraph-400);
-  color: var(--base-color-ui-600);
-  display: block;
-  font-weight: 400;
-}
-
-.base-option--disabled {
-  opacity: 0.5;
-  color: var(--base-color-ui-500);
-  cursor: not-allowed;
-  background-color: var(--base-color-white);
+  --base-option-bg-color: var(--base-option-selected-color);
+  --base-option-font-color: var(--base-color-white);
 }
