--- a/lib/src/components/base-select/base-select.css
+++ b/lib/src/components/base-select/base-select.css
@@ -1,18 +1,17 @@
 :host {
-  --base-select-active-color: var(--base-color-active, #2684ff);
-  --base-select-font-size: 14px;
+  /* ASSIGN TO LOCAL VARIABLES */
+  --base-select-active-color: var(--base-color-focus);
+  --base-select-font-size: var(--base-font-size-sm);
   --base-select-min-height: 38px;
   --base-select-background: none;
   --base-select-padding: 0px;
-  --base-select-placeholder-color: var(--base-color-neutral-3, #b3b3b3);
-  --base-select-border-width: var(--base-border-width-1, 1px);
+  --base-select-placeholder-color: var(--base-color-ui);
+  --base-select-border-width: 1px;
   --base-select-border-style: solid;
-  --base-select-border-color: var(--base-color-neutral-2, #e6e6e6);
-  --base-select-border-radius: var(--base-border-radius-1, 0px);
-
-  --base-select-option-list-border: var(--base-select-border-width) solid
-    var(--base-neutral--2, #e6e6e6);
-  --base-select-option-list-border-radius: var(--base-select-border-radius);
+  --base-select-border-color: var(--base-color-ui-light);
+  --base-select-border-radius: var(--base-border-radius-sm);
+  --base-select-option-list-border: 1px solid var(--base-color-ui-light);
+  --base-select-option-list-border-radius: var(--base-select-border-radius-sm);
   --base-select-option-list-box-shadow: 0px;
   --base-select-option-list-position: absolute;
   --base-select-option-list-top: 110%;
@@ -45,7 +44,7 @@
 }
 
 :host:hover {
-  --base-select-border-color: #cecece;
+  --base-select-border-color: var(--base-color-ui);
 }
 
 :host([is-focused]) {
