--- a/lib/src/components/base-button/base-button.css
+++ b/lib/src/components/base-button/base-button.css
@@ -1,6 +1,5 @@
 :host {
-  display: inline-block;
-  --base-button-padding: var(--base-space-sm) var(--base-space-md);
+  --base-button-padding: 0 var(--base-space-md);
   --base-button-bg-color: var(--base-color-ui-lighter);
   --base-button-border: none;
   --base-button-border-radius: var(--base-border-radius-sm);
@@ -11,9 +10,32 @@
   --base-button-transition: all 0.2s ease;
   --base-button-cursor: pointer;
   --base-button-display: inline-block;
+  --base-button-height: var(--base-size-md);
+}
+
+:host {
+  display: inline-block;
+}
+
+:host([full]) {
+  display: block;
+  width: 100%;
+}
+
+:host([size="sm"]) {
+  --base-button-height: var(--base-size-sm);
+}
+
+:host([size="md"]) {
+  --base-button-height: var(--base-size-md);
+}
+
+:host([size="lg"]) {
+  --base-button-height: var(--base-size-lg);
 }
 
 :host button {
+  height: var(--base-button-height);
   outline: 0;
   color: var(--base-button-text-color);
   cursor: var(--base-button-cursor);
@@ -40,6 +62,7 @@
 
 :host[full] button {
   width: 100%;
+  display: block;
 }
 
 :host([type="primary"]) button {
