--- a/lib/src/themes/minimal.css
+++ b/lib/src/themes/minimal.css
@@ -52,7 +52,7 @@
     var(--base-lightness)
   );
 
-  --base-color-success-hue: 130;
+  --base-color-success-hue: 142;
   --base-color-success: hsl(
     var(--base-color-success-hue),
     var(--base-saturation-high),
@@ -121,6 +121,24 @@
   --base-border-radius-sm: 2px;
   --base-border-radius-md: 4px;
   --base-border-radius-lg: 8px;
+
+  --base-size: 32px;
+  --base-size-md: 32px;
+  --base-size-sm: 24px;
+  --base-size-lg: 48px;
+
+  /* DEPTH */
+  --ab-depth-none: none;
+  --ab-depth-xs: 0px 1px 1px 0px rgba(9, 30, 66, 0.06),
+    0px 2px 4px 0px rgba(9, 30, 66, 0.15);
+  --ab-depth-sm: 0px 2px 2px 0px rgba(9, 30, 66, 0.06),
+    0px 4px 8px -2px rgba(9, 30, 66, 0.25);
+  --ab-depth-md: 0px 2px 2px 0px rgba(9, 30, 66, 0.06),
+    0px 8px 16px -4px rgba(9, 30, 66, 0.25);
+  --ab-depth-lg: 0px 4px 4px 0px rgba(9, 30, 66, 0.06),
+    0px 12px 24px -6px rgba(9, 30, 66, 0.25);
+  --ab-depth-xl: 0px 6px 6px 0px rgba(9, 30, 66, 0.1),
+    0px 20px 32px -8px rgba(9, 30, 66, 0.25);
 }
 
 [theme="minimal"] {
