--- a/lib/src/components/base-knobs/base-knobs.css
+++ b/lib/src/components/base-knobs/base-knobs.css
@@ -29,26 +29,21 @@ button[active] {
   color: black;
 }
 
-.props {
-  margin-top: 15px;
-  display: block;
-}
-
 table {
+  margin-top: 15px;
   text-align: left;
   display: inline-block;
-  max-width: 100%;
   overflow-x: scroll;
   overflow: auto;
   margin-top: 30px;
   border-radius: 10px;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
-  border: 2px solid #eee;
+  border: 2px solid var(--base-color-secondary-light);
 }
 
 table thead tr {
-  background: #f3eeff;
-  border-bottom: 3px solid #eee;
+  background: var(--base-color-secondary-light);
+  border-bottom: 3px solid var(--base-color-secondary-light);
 }
 
 table th {
@@ -64,13 +59,9 @@ table tr td:first-of-type {
   white-space: nowrap;
 }
 
-table tr td:last-of-type {
-  width: 100%;
-}
-
 table tr {
   background-color: #fff;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid var(--base-color-secondary-light);
 }
 
 table tr:nth-child(2n) {
