--- a/lib/src/themes/minimal.css
+++ b/lib/src/themes/minimal.css
@@ -21,18 +21,18 @@
   --base-color-primary-hue: 259;
   --base-color-primary: hsl(
     var(--base-color-primary-hue),
-    var(--base-saturation-high),
-    var(--base-lightness-default)
+    var(--base-saturation-highest),
+    var(--base-lightness-dark)
   );
   --base-color-primary-light: hsl(
     var(--base-color-primary-hue),
     var(--base-saturation-high),
-    var(--base-lightness-light)
+    var(--base-lightness-default)
   );
   --base-color-primary-dark: hsl(
     var(--base-color-primary-hue),
     var(--base-saturation-high),
-    var(--base-lightness-dark)
+    var(--base-lightness-darker)
   );
 
   --base-color-secondary-hue: 258;
