--- a/lib/src/components/base-select/base-option.css
+++ b/lib/src/components/base-select/base-option.css
@@ -1,7 +1,7 @@
 :host {
   --base-option-padding: 0 var(--base-space-sm);
   --base-option-bg-color: var(--base-color-white);
-  --base-option-border-radius: var(--base-border-radius-sm);
+  --base-option-border-radius: 0;
   --base-option-active-color: var(--base-color-focus-light);
   --base-option-selected-color: var(--base-color-focus);
   --base-option-font-color: var(--base-color-black);
