--- a/lib/src/components/base-radio/base-radio.css
+++ b/lib/src/components/base-radio/base-radio.css
@@ -1,5 +1,5 @@
 :host {
-  --base-radio-height: var(--ab-size-md);
+  --base-radio-height: var(--base-size-md);
 }
 
 :host {
@@ -8,31 +8,40 @@
   height: var(--base-radio-height);
 }
 
+:host([full]) {
+  display: block;
+  width: 100%;
+}
+
 :host label {
   height: var(--base-radio-height);
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  flex-direction: row-reverse;
   font-size: var(--hw-font-size-small);
   position: relative;
   line-height: 1.5;
+  margin-right: var(--base-space-xs);
+}
+
+:host([full]) label {
+  display: flex;
 }
 
 :host [part="indicator"] {
   display: inline-block;
-  float: left;
   position: relative;
-  margin-top: 0;
-  margin-right: 0.4rem;
+  margin-right: var(--base-space-xs);
   border: 2px solid var(--base-color-ui-light);
   border-radius: 50%;
   background: var(--hw-color-white);
-  width: var(--base-space-lg);
-  height: var(--base-space-lg);
+  width: calc(var(--base-radio-height) - var(--base-space-sm));
+  height: calc(var(--base-radio-height) - var(--base-space-sm));
   transition: border-color 0.3s ease, max-height 0.3s ease, transform 0.3s ease;
 }
 
 :host [part="label"] {
   display: inline-block;
-  max-width: calc(100% - 22px - 0.4rem);
 }
 
 :host [part="input-field"] {
@@ -55,8 +64,8 @@
 :host [part="input-field"]:checked ~ [part="indicator"]:after {
   content: "";
   position: absolute;
-  width: 10px;
-  height: 10px;
+  width: 60%;
+  height: 60%;
   border-radius: 50%;
   top: 50%;
   left: 50%;
