--- a/lib/src/components/base-input/base-input.css
+++ b/lib/src/components/base-input/base-input.css
@@ -50,7 +50,7 @@
   height: 100%;
   outline: 0;
   border: 0;
-  padding: 0 var(--base-space-sm);
+  padding: 0 var(--base-space-md);
 }
 
 ::slotted([slot="help"]) {
